--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body{
    }
    main{
     display: flex;
+   
     flex-direction: column;
    align-items:center;
+   
 }
 
 .container{
@@ -169,4 +171,7 @@ hr{
 }
 .foot-text{
     margin-left: 20px;
+}
+.fa-brands{
+ color: white;
 }
