--- a/style2.css
+++ b/style2.css
@@ -104,6 +104,7 @@ body{
 .BlogT{
     background-color:white;
     color: black;
+    text-decoration: none;
     text-align: center;
     
    margin-left: 25px;
@@ -160,3 +161,6 @@ hr{
 .foot-text{
     margin-left: 20px;
 }
+.fa-brands{
+    color: white;
+   }
