--- a/style.css
+++ b/style.css
@@ -155,12 +155,13 @@ body{
    text-align: center;
    justify-content: center;
    align-items: center;
+   width: 1600px;
    height: 444px;
 }
 hr{
     border: 1px solid #D1D1D1;
     margin-top: 100px;
-    width: 1320px;
+    
     height: 0px;
 }
 .foot-p{
@@ -175,3 +176,28 @@ hr{
 .fa-brands{
  color: white;
 }
+
+ /* media query */
+
+ @media screen and (max-width:576px){
+    .blog{
+        grid-template-columns: repeat(1 ,1fr);
+    }
+    .second-sec{
+        display: grid;
+        grid-template-columns: repeat(1 ,1fr);
+    }
+
+ }
+
+ @media  screen and(min-width: 577px) and(max-width:992px) {
+    .second-sec{
+        margin-top: 80px;
+        display: grid;
+        grid-template-columns: repeat(1 ,1fr);
+    }
+    .blog{
+        grid-template-columns: repeat(2 ,1fr);}
+        
+    
+ }
